Implementacao de click listener na lista de bancos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="fb_login_protocol_scheme">fb112169139364110</string>
 
 
-    <string name="app_name">AmigosSeuPauloProtetor</string>
+    <string name="app_name">Amigos</string>
     <string name="title_activity_main">MainActivity</string>
 
     <string name="bemvindo">Seja bem-vindo ao aplicativo dos Amigos do Seu Paulo Protetor, aqui você fica por dentro das novidades e tem acesso às nossas contas para doações...</string>
